--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,15 @@ header {
 #searchBtn:hover, #prevBtn:hover, #nextBtn:hover, #resetBtn:hover {
   opacity: 0.8;
 }
+
+ul{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+img{
+  height: 300px;
+  width: 300px;
+}
